# tg-userbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  args.py  bad_topics.json.example  cleaner.py  conn.py  docker-compose.yml  handlers.py  logger.py  main.py  my_account.session  pyproject.toml  spammy_topics.json.example  tui.py
