[project]
name = "tg-userbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=0.9.9",
    "pyrogram>=2.0.106",
    "tgcrypto>=1.2.5",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.18.0",
]
